# fraud-investigation-agent

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  fraud_agent.db  fraud_memory.db  main.py  pyproject.toml  readme.md  streamlit_app.py
logs/: fraud_audit_logs.jsonl
notebooks/: fraud_detection_training.ipynb
scripts/: visualize_graph.py
src/fraud_agent/: main.py
src/fraud_agent/agents/: checkpointer.py  fraud_graph.py  state.py
src/fraud_agent/apis/: routes.py
src/fraud_agent/database/: audit_model.py  database.py
src/fraud_agent/models/: fraud_model.pkl  scaler.pkl
src/fraud_agent/prompts/: fraud_report_prompt.py
src/fraud_agent/schemas/: AgentInvestigationResponse.py  HumanRequest_schema.py  fraud_review.py  investigation_schema.py  prediction_schema.py  transaction_schema.py
src/fraud_agent/services/: audit_log_service.py  investigation_service.py  llm_report_service.py  prediction_service.py
src/fraud_agent/tests/: test_graph.py
src/fraud_agent/tools/: fraud_rules_tool.py  notification_tool.py  similar_case_tool.py
