[project]
name = "fraud-investigation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
